maria-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: wp
spec:
  selector:
    matchLabels:
      app: mariadb
  updateStrategy:
    type: RollingUpdate
  serviceName: mariadb-service
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: dbdata-pvc
          persistentVolumeClaim:
            claimName: firstpvc
      containers:
        - name: mariadb
          image: mariadb:11
#          lifecycle:
#            postStart:
#              exec:
#                command: ["/bin/sh", "-c", "mysql -h localhost -u root -p$(MYSQL_ROOT_PASSWORD) ; CREATE DATABASE wordpress;"]
          ports:
            - name: mariadbport
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: dbdata-pvc
              mountPath: /var/lib/mysql/
