wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress1
  namespace: wp
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: wordpress1
  template:
    metadata:
      labels:
        app: wordpress1
    spec: 
      volumes:
        - name: wp-pvc
          persistentVolumeClaim:
            claimName: wordpresspvc
      containers:
      - name: wordpress1
        image: wordpress:latest
        ports:
        - containerPort: 80
        volumeMounts:
            - name: wp-pvc
              mountPath: /var/www/html
