maria-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: wp
spec:
  type: NodePort
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
