wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpressservice
  namespace: wp
spec:
  type: NodePort
  selector:
    app: wordpress1
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 80
      nodePort: 31007
