ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: mariadb
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/ss"
        pathType: Exact
        backend:
          service:
            name: wordpressclusterip
            port:
              number: 80
