networkpolicy.yml
apiVersion: v1
kind: NetworkPolicy
metadata:
    name: <name>
    namespace: <namespace>
spec:
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: <cidr address>
        except:
        - <cidr address>
    ports:
    - protocol: <TCP|UDP>
      port: <port number>
  egress:
  - to:
    - ipBlock:
        cidr: <cidr address>
    ports:
    - protocol: <TCP|UDP>
      port: <port number>
